# folgore

./: .gitignore  Cargo.toml  JUSTFILE  LICENSE  Makefile  README.md  coffee.yml
.github/workflows/: build.yml
folgore-bitcoind/: Cargo.toml
folgore-bitcoind/src/: lib.rs
folgore-common/: Cargo.toml
folgore-common/src/: lib.rs  stragegy.rs
folgore-common/src/client/: fee_estimator.rs  mod.rs
folgore-esplora/: Cargo.toml
folgore-esplora/src/: lib.rs
folgore-nakamoto/: Cargo.toml
folgore-nakamoto/src/: lib.rs
folgore-plugin/: Cargo.toml
folgore-plugin/src/: main.rs  model.rs  plugin.rs  recovery.rs
future-common/: Cargo.toml
future-common/src/: lib.rs
future-common/src/client/: mod.rs
future_client/: Cargo.toml
nakamoto_cln_client/: Cargo.toml
nakamoto_cln_client/src/: lib.rs
plugin/: Cargo.toml
plugin/src/: client.rs  main.rs  plugin.rs
satoshi-common/: Cargo.toml
satoshi-common/src/client/: mod.rs
satoshi-esplora/: Cargo.toml
satoshi-esplora/src/: lib.rs
satoshi-nakamoto/: Cargo.toml
satoshi-nakamoto/src/: lib.rs
satoshi-plugin/: Cargo.toml
satoshi-plugin/src/: main.rs  plugin.rs
