[package]
name = "folgore-common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
bitcoin_hashes = "0.12.0"
log = "0.4"

clightningrpc-common = "0.3.0-beta.4"
clightningrpc-plugin = { git = "https://github.com/laanwj/cln4rust.git", branch = "macros/plugin-logv2", features = ["log"] }
