[package]
name = "folgore-common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
bitcoin_hashes = "0.12.0"
log = "0.4"

clightningrpc-common = { git = "https://github.com/laanwj/cln4rust.git", branch = "macros/async-executionv2" }
clightningrpc-plugin = { git = "https://github.com/laanwj/cln4rust.git", branch = "macros/async-executionv2", features = ["log"] }
