[package]
name = "folgore-esplora"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
folgore-common = { path = "../folgore-common" }
clightningrpc-common = "0.3.0-beta.4"
serde_json = "1.0"
esplora-client = "0.5.0"
log = "0.4.17"
