[package]
name = "folgore-esplora"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
folgore-common = { path = "../folgore-common" }
esplora-api = { git = "https://git.hedwing.dev/dev-crew/btc-utils" }
log = "0.4.17"
serde_json = "1"
serde = "1"
