[package]
name = "folgore-esplora"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
folgore-common = { path = "../folgore-common" }
esplora-api = { git = "https://github.com/dev-crew-host/btc-utils.git" }
serde_json = "1"
serde = "1"
