[package]
name = "folgore-nakamoto"
version = "0.1.0"
edition = "2021"


[dependencies]
nakamoto-client = { git = "https://github.com/vincenzopalazzo/nakamoto", branch = "macros/client_model-fixes"  }
nakamoto-net-poll = { git = "https://github.com/vincenzopalazzo/nakamoto", branch = "macros/client_model-fixes"  }
nakamoto-p2p = { git = "https://github.com/vincenzopalazzo/nakamoto", branch = "macros/client_model-fixes"  }
nakamoto-common = { git = "https://github.com/vincenzopalazzo/nakamoto", branch = "macros/client_model-fixes"  }
folgore-common = { path = "../folgore-common" }
clightningrpc-common = "0.3.0-beta.4"
clightningrpc-plugin = "0.3.0-beta.8"
serde_json = "1.0"
