[package]
name = "folgore-nakamoto"
version = "0.1.0"
edition = "2021"


[dependencies]
nakamoto-client = { git = "https://github.com/cloudhead/nakamoto" }
nakamoto-net-poll = { git = "https://github.com/cloudhead/nakamoto"  }
nakamoto-p2p = { git = "https://github.com/cloudhead/nakamoto"  }
nakamoto-common = { git = "https://github.com/cloudhead/nakamoto"  }
folgore-common = { path = "../folgore-common" }

serde_json = "1.0"
