[package]
name = "folgore_plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
clightningrpc-common = "0.3.0-beta.4"
clightningrpc-plugin = { git = "https://github.com/laanwj/cln4rust.git", branch = "macros/plugin-logv2", features = ["log"] }
clightningrpc-plugin-macros = "0.3.0-beta.4"
folgore-common = { path = "../folgore-common" }
folgore-nakamoto = { path = "../folgore-nakamoto" }
folgore-esplora = { path = "../folgore-esplora" }
folgore-bitcoind = { path = "../folgore-bitcoind" }
serde = "1.0.159"
serde_json = "1.0.95"
