[package]
name = "folgore_plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
clightningrpc-plugin-macros = { git = "https://github.com/laanwj/cln4rust.git", branch = "macros/async-executionv2" }
folgore-common = { path = "../folgore-common" }
folgore-nakamoto = { path = "../folgore-nakamoto" }
folgore-esplora = { path = "../folgore-esplora" }
folgore-bitcoind = { path = "../folgore-bitcoind" }
serde = "1.0.159"
serde_json = "1.0.95"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
env_logger = "0.11.1"
