[package]
name = "nakamoto_cln_client"
version = "0.1.0"
edition = "2021"


[dependencies]
nakamoto-client = { git = "https://github.com/vincenzopalazzo/nakamoto", branch = "macros/client_model"  }
nakamoto-net-poll = { git = "https://github.com/vincenzopalazzo/nakamoto", branch = "macros/client_model"  }
nakamoto-p2p = { git = "https://github.com/vincenzopalazzo/nakamoto", branch = "macros/client_model"  }
nakamoto-common = { git = "https://github.com/vincenzopalazzo/nakamoto", branch = "macros/client_model"  }
satoshi-common = { path = "../satoshi-common" }
clightningrpc-plugin = "0.3.0-beta.6"
clightningrpc-common = "0.3.0-beta.3"
serde_json = "1.0"
