[package]
name = "satoshi_plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
clightningrpc-common = { git = "https://github.com/laanwj/cln4rust.git", branch = "macros/common" }
clightningrpc-plugin = { git = "https://github.com/laanwj/cln4rust.git", branch = "macros/common" }
satoshi-common = { path = "../satoshi-common" }
serde = "1.0.159"
serde_json = "1.0.95"
