[package]
name = "satoshi-esplora"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
satoshi-common = { path = "../satoshi-common" }
clightningrpc-common = { git = "https://github.com/laanwj/cln4rust.git", branch = "macros/common" }
clightningrpc-plugin = { git = "https://github.com/laanwj/cln4rust.git", branch = "macros/common" }
serde_json = "1.0"
esplora-client = { version = "0.4.0", features = ["blocking"] }
