[package]
name = "satoshi-nakamoto"
version = "0.1.0"
edition = "2021"


[dependencies]
nakamoto-client = { git = "https://github.com/vincenzopalazzo/nakamoto", branch = "macros/client_model"  }
nakamoto-net-poll = { git = "https://github.com/vincenzopalazzo/nakamoto", branch = "macros/client_model"  }
nakamoto-p2p = { git = "https://github.com/vincenzopalazzo/nakamoto", branch = "macros/client_model"  }
nakamoto-common = { git = "https://github.com/vincenzopalazzo/nakamoto", branch = "macros/client_model"  }
satoshi-common = { path = "../satoshi-common" }
clightningrpc-common = { git = "https://github.com/laanwj/cln4rust.git", branch = "macros/api" }
clightningrpc-plugin = { git = "https://github.com/laanwj/cln4rust.git", branch = "macros/api" }
serde_json = "1.0"
